<resources>
    <string name="app_name">TryEng</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="brainstorm_subtitle">Lets try to train together!</string>
    <string name="brainstorm_title">Brainstorm</string>
    <string name="search_hint">Enter a word</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="text_not_found">THE WORD IS NOT FOUND IN YOUR DICTIONARY.</string>
    <string name="button_not_found">DO YOU WANT TO ADD A WORD?</string>
    <string name="some_definition">Здесь какое-то определение, но я не придумал</string>
    <string name="some_example">Здесь должен быть какой-то пример, но я опять не придумал</string>
    <string name="some_word">Word</string>
    <string name="some_translation">Translation</string>
    <string name="add_new_pack">Add word set</string>
    <string name="home">Home</string>
    <string name="dictionary">Dictionary</string>
    <string name="training">Training</string>
    <string name="chat">Chat</string>
    <string name="username">Andrey Larionov</string>
    <string name="pack_settings">Pack settings</string>
    <string name="save_changes">Save changes</string>
    <string name="add_for_training">Add for training</string>
    <string name="new_pack_name">New pack name</string>
    <string name="profession">Profession</string>
    <string name="translate_forward_title">Translate the word</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="current_page_number_text">1</string>
    <string name="all_pages_text">5</string>
    <string name="slash">/</string>
    <string name="task_icon">Task icon</string>
    <string name="don_t_train_this_words">Remove pack from training</string>
    <string name="sound">Sound</string>
    <string name="exit_title">Are you sure you want \nto finish?</string>
    <string name="stay_here">Stay here</string>
    <string name="exit">Exit</string>
    <string name="exit_title_1">Want to finish?</string>
    <string name="exit_description">If you complete the training now, your progress will not be saved.</string>
    <string name="icon">Icon</string>
    <string name="save">Save</string>
    <string name="users">Users</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="title_change_image">Click on the image to change it to</string>
    <string name="new_default_avatar">New default avatar</string>
    <string name="random_avatar">Random avatar</string>
    <string name="accept_new_default_avatar">Accept new default avatar</string>
    <string name="uploaded_avatar_by_user">Uploaded avatar by user</string>
    <string name="your_own_picture">Your own picture</string>
    <string name="delete_user_avatar">Delete user avatar</string>
    <string name="accept_new_user_avatar">Accept new user avatar</string>
    <string name="new_username_title">Enter new user name</string>
    <string name="new_user_name">New user name</string>
    <string name="sound_a_word">Sound a word</string>
    <string name="add_word_to_favorite">Add word to favorite</string>
    <string name="validate">VALIDATE</string>
    <string name="verification_text">Please type the verification code sent to \n </string>
    <string name="sing_in">\t\tSing In\t\t\t</string>
    <string name="Next">Next</string>
    <string name="word_translation">Word-translation</string>
    <string name="translation_word">Translation-word</string>
    <string name="listening">Listening</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_description">Почувствуй себя супергероем и \nпопробуй на этот раз точно выучить английский.</string>
    <string name="learn_title">Learn every day</string>
    <string name="learn_description">Специально для тебя мы создали тренировки. Не пропускай их!</string>
    <string name="your_word_sets">Your word sets</string>
    <string name="your_trainings">Your trainings</string>
    <string name="future_text">This page will be available in the future</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="verification_icon">Verification icon</string>
</resources>