<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp">

        <TextView
            android:id="@+id/textWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/some_word"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btnLike"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/some_translation"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/btnLike"
            app:layout_constraintTop_toBottomOf="@id/textWord" />

        <xyz.hanks.library.bang.SmallBangView
            android:id="@+id/btnLike"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@id/textTranslation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textWord">

            <ImageView
                android:id="@+id/imageLike"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_like_disabled"
                android:contentDescription="@string/add_word_to_favorite" />

        </xyz.hanks.library.bang.SmallBangView>

        <ImageButton
            android:id="@+id/btnSound"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_sound"
            android:contentDescription="@string/sound_a_word"
            app:layout_constraintBottom_toBottomOf="@id/textTranslation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textWord" />

        <TextView
            android:id="@+id/textDefinition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_info_primary"
            android:drawablePadding="8dp"
            android:text="@string/some_definition"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTranslation" />

        <TextView
            android:id="@+id/textExample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:text="@string/some_example"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDefinition" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>